fix!: fixed imports for styled components

--- a/src/modules/createComponent/templates/component.mustache
+++ b/src/modules/createComponent/templates/component.mustache
@@ -1,4 +1,4 @@
-import React from 'react'
+import { ReactNode } from 'react'
 
 import { StContainer } from './{{{componentName}}}.styled'
 {{{reactNativeTypesImport}}}
