fix: set correct style property

--- a/src/modules/createComponent/templates/component.styled.mustache
+++ b/src/modules/createComponent/templates/component.styled.mustache
@@ -7,6 +7,6 @@ interface Props {
   children?: ReactNode
 }
 
-export const {{{componentName}}} = ({ children, style }: Props) => {
-  return <StContainer style={style}>{children}</StContainer>
+export const {{{componentName}}} = ({ children, {{componentStyleProp}} }: Props) => {
+  return <StContainer {{componentStyleProp}}={{componentStylePropPass}}>{children}</StContainer>
 }
